package CommandSales.ObserverAndCommand;

public class Observer {
    public void update(String saleStart) {

    }
}
